// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button/demo/basic.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Secondary
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-dashed arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-outline arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Outline
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Text
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Button/demo/button-group.md correctly 1`] = `
<div
  class="arco-space arco-space-vertical"
>
  <div
    class="arco-space-item"
    style="margin-bottom:24px"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center"
    >
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <div
          class="arco-btn-group"
        >
          <button
            class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
            type="button"
          >
            <span>
              Publish
            </span>
          </button>
          <button
            class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="arco-space-item"
      >
        <div
          class="arco-btn-group"
        >
          <button
            class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
            type="button"
          >
            <span>
              Publish
            </span>
          </button>
          <button
            class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-more"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z"
                fill="currentColor"
                stroke="none"
              />
              <path
                d="M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:24px"
  >
    <div
      class="arco-btn-group"
    >
      <button
        class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
        type="button"
      >
        <span>
          Publish
        </span>
      </button>
      <button
        class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-down"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M39.6 17.443 24.043 33 8.487 17.443"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center"
    >
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <div
          class="arco-btn-group"
        >
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
            style="padding:0 8px"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-left"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M32 8.4 16.444 23.956 32 39.513"
              />
            </svg>
            <span>
              Prev
            </span>
          </button>
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
            style="padding:0 8px"
            type="button"
          >
            <span>
              Next
            </span>
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-right"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="m16 39.513 15.556-15.557L16 8.4"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <div
          class="arco-btn-group"
        >
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-star"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M22.552 6.908a.5.5 0 0 1 .896 0l5.02 10.17a.5.5 0 0 0 .376.274l11.224 1.631a.5.5 0 0 1 .277.853l-8.122 7.916a.5.5 0 0 0-.143.443l1.917 11.178a.5.5 0 0 1-.726.527l-10.038-5.278a.5.5 0 0 0-.466 0L12.73 39.9a.5.5 0 0 1-.726-.527l1.918-11.178a.5.5 0 0 0-.144-.443l-8.122-7.916a.5.5 0 0 1 .278-.853l11.223-1.63a.5.5 0 0 0 .376-.274l5.02-10.17Z"
              />
            </svg>
          </button>
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-message"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z"
              />
            </svg>
          </button>
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-settings"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M18.797 6.732A1 1 0 0 1 19.76 6h8.48a1 1 0 0 1 .964.732l1.285 4.628a1 1 0 0 0 1.213.7l4.651-1.2a1 1 0 0 1 1.116.468l4.24 7.344a1 1 0 0 1-.153 1.2L38.193 23.3a1 1 0 0 0 0 1.402l3.364 3.427a1 1 0 0 1 .153 1.2l-4.24 7.344a1 1 0 0 1-1.116.468l-4.65-1.2a1 1 0 0 0-1.214.7l-1.285 4.628a1 1 0 0 1-.964.732h-8.48a1 1 0 0 1-.963-.732L17.51 36.64a1 1 0 0 0-1.213-.7l-4.65 1.2a1 1 0 0 1-1.116-.468l-4.24-7.344a1 1 0 0 1 .153-1.2L9.809 24.7a1 1 0 0 0 0-1.402l-3.364-3.427a1 1 0 0 1-.153-1.2l4.24-7.344a1 1 0 0 1 1.116-.468l4.65 1.2a1 1 0 0 0 1.213-.7l1.286-4.628Z"
              />
              <path
                d="M30 24a6 6 0 1 1-12 0 6 6 0 0 1 12 0Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="arco-space-item"
      >
        <div
          class="arco-btn-group"
        >
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-star"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M22.552 6.908a.5.5 0 0 1 .896 0l5.02 10.17a.5.5 0 0 0 .376.274l11.224 1.631a.5.5 0 0 1 .277.853l-8.122 7.916a.5.5 0 0 0-.143.443l1.917 11.178a.5.5 0 0 1-.726.527l-10.038-5.278a.5.5 0 0 0-.466 0L12.73 39.9a.5.5 0 0 1-.726-.527l1.918-11.178a.5.5 0 0 0-.144-.443l-8.122-7.916a.5.5 0 0 1 .278-.853l11.223-1.63a.5.5 0 0 0 .376-.274l5.02-10.17Z"
              />
            </svg>
            <span>
              Favorite
            </span>
          </button>
          <button
            class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-settings"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M18.797 6.732A1 1 0 0 1 19.76 6h8.48a1 1 0 0 1 .964.732l1.285 4.628a1 1 0 0 0 1.213.7l4.651-1.2a1 1 0 0 1 1.116.468l4.24 7.344a1 1 0 0 1-.153 1.2L38.193 23.3a1 1 0 0 0 0 1.402l3.364 3.427a1 1 0 0 1 .153 1.2l-4.24 7.344a1 1 0 0 1-1.116.468l-4.65-1.2a1 1 0 0 0-1.214.7l-1.285 4.628a1 1 0 0 1-.964.732h-8.48a1 1 0 0 1-.963-.732L17.51 36.64a1 1 0 0 0-1.213-.7l-4.65 1.2a1 1 0 0 1-1.116-.468l-4.24-7.344a1 1 0 0 1 .153-1.2L9.809 24.7a1 1 0 0 0 0-1.402l-3.364-3.427a1 1 0 0 1-.153-1.2l4.24-7.344a1 1 0 0 1 1.116-.468l4.65 1.2a1 1 0 0 0 1.213-.7l1.286-4.628Z"
              />
              <path
                d="M30 24a6 6 0 1 1-12 0 6 6 0 0 1 12 0Z"
              />
            </svg>
            <span>
              Setting
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Button/demo/disabled.md correctly 1`] = `
<div
  class="arco-space arco-space-vertical"
>
  <div
    class="arco-space-item"
    style="margin-bottom:24px"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center"
    >
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Secondary
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-dashed arco-btn-size-default arco-btn-shape-square arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Dashed
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-outline arco-btn-size-default arco-btn-shape-square arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Outline
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
      >
        <button
          class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Text
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:24px"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center"
    >
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-status-danger arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-status-danger arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Secondary
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-dashed arco-btn-size-default arco-btn-shape-square arco-btn-status-danger arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Dashed
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-outline arco-btn-size-default arco-btn-shape-square arco-btn-status-danger arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Outline
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
      >
        <button
          class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square arco-btn-status-danger arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Text
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:24px"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center"
    >
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-status-warning arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-status-warning arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Secondary
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-dashed arco-btn-size-default arco-btn-shape-square arco-btn-status-warning arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Dashed
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-outline arco-btn-size-default arco-btn-shape-square arco-btn-status-warning arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Outline
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
      >
        <button
          class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square arco-btn-status-warning arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Text
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center"
    >
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-status-success arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-status-success arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Secondary
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-dashed arco-btn-size-default arco-btn-shape-square arco-btn-status-success arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Dashed
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          class="arco-btn arco-btn-outline arco-btn-size-default arco-btn-shape-square arco-btn-status-success arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Outline
          </span>
        </button>
      </div>
      <div
        class="arco-space-item"
      >
        <button
          class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square arco-btn-status-success arco-btn-disabled"
          disabled=""
          type="button"
        >
          <span>
            Text
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Button/demo/icon.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-plus"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M5 24h38M24 5v38"
        />
      </svg>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-delete"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M5 11h5.5m0 0v29a1 1 0 0 0 1 1h25a1 1 0 0 0 1-1V11m-27 0H16m21.5 0H43m-5.5 0H32m-16 0V7h16v4m-16 0h16M20 18v15m8-15v15"
        />
      </svg>
      <span>
         Delete
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Button/demo/loading.md correctly 1`] = `
<div>
  <div
    style="display:grid;grid-template-columns:repeat(3, 100px);grid-row-gap:24px;grid-column-gap:24px;margin-left:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-loading"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-loading"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
        />
      </svg>
      <span>
        Loading
      </span>
    </button>
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-loading"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-loading"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
        />
      </svg>
      <span>
        Loading
      </span>
    </button>
    <button
      class="arco-btn arco-btn-dashed arco-btn-size-default arco-btn-shape-square arco-btn-loading"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-loading"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
        />
      </svg>
      <span>
        Loading
      </span>
    </button>
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-circle arco-btn-loading arco-btn-icon-only"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-loading"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
        />
      </svg>
    </button>
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-circle arco-btn-loading arco-btn-icon-only"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-loading"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
        />
      </svg>
    </button>
    <button
      class="arco-btn arco-btn-dashed arco-btn-size-default arco-btn-shape-circle arco-btn-loading arco-btn-icon-only"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-loading"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
        />
      </svg>
    </button>
  </div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    style="margin:24px"
    type="button"
  >
    <span>
      Click Me
    </span>
  </button>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    style="margin:24px"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-plus"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        d="M5 24h38M24 5v38"
      />
    </svg>
    <span>
      Click Me
    </span>
  </button>
  <div
    class="arco-divider arco-divider-horizontal arco-divider-with-text arco-divider-with-text-center"
    role="separator"
    style="width:440px;min-width:440px"
  >
    <span
      class="arco-divider-text arco-divider-text-center"
    >
      loading fixed width
    </span>
  </div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-loading-fixed-width"
    style="margin:24px"
    type="button"
  >
    <span>
      Search
    </span>
  </button>
</div>
`;

exports[`renders Button/demo/long.md correctly 1`] = `
<div
  class="arco-space arco-space-vertical"
  style="width:360px;border:1px solid var(--color-border);border-radius:4px;padding:20px"
>
  <div
    class="arco-space-item"
    style="margin-bottom:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-long"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:24px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-long"
      type="button"
    >
      <span>
        Secondary
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:24px"
  >
    <button
      class="arco-btn arco-btn-dashed arco-btn-size-default arco-btn-shape-square arco-btn-long"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-bottom:24px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-long"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square arco-btn-long"
      type="button"
    >
      <span>
        Text
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Button/demo/shape.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-plus"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M5 24h38M24 5v38"
        />
      </svg>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-circle arco-btn-icon-only"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-plus"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M5 24h38M24 5v38"
        />
      </svg>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-round"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Button/demo/size.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-mini arco-btn-shape-square"
      type="button"
    >
      <span>
        Mini
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-small arco-btn-shape-square"
      type="button"
    >
      <span>
        Small
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-large arco-btn-shape-square"
      type="button"
    >
      <span>
        Large
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Button/demo/status.md correctly 1`] = `
<div
  style="display:grid;grid-template-columns:repeat(4, 100px);grid-row-gap:24px;grid-column-gap:24px"
>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-status-warning"
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-status-warning"
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
  <button
    class="arco-btn arco-btn-outline arco-btn-size-default arco-btn-shape-square arco-btn-status-warning"
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
  <button
    class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square arco-btn-status-warning"
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-status-danger"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-status-danger"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
  <button
    class="arco-btn arco-btn-outline arco-btn-size-default arco-btn-shape-square arco-btn-status-danger"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
  <button
    class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square arco-btn-status-danger"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-status-success"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-status-success"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <button
    class="arco-btn arco-btn-outline arco-btn-size-default arco-btn-shape-square arco-btn-status-success"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <button
    class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square arco-btn-status-success"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
</div>
`;
